Revert "Try fixing align, remove tests"
This reverts commit b05249f83e7be8a33093cbc43f0f28e81f43d589.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -438,11 +438,10 @@ Post List
 	box-shadow: inset 0 1px 0 #eee;
 	padding: 40px 0 0 0;
 	margin-top: 100px;
+	text-align: center;
 }
 #footer a.twitter {
   background: #4fafed;
-  text-align: center;
-  display: block;
 }
 
 #footer a {
@@ -453,8 +452,6 @@ Post List
   padding: 6px 10px;
   border-radius: 4px;
   margin-left: 2px;
-  text-align: center;
-  display: block;
 }
 
 
